samples/_failures_safe/1761455888_ebe83c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dea9d505.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_dea9d505.c:184:9: error: expected identifier at end of input
  184 |         if (sm->
      |         ^~
./samples/SAFE/__tmp_dea9d505.c:184:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_dea9d505.c:184:9: error: expected declaration or statement at end of input
